--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^0.21.1",
     "bootstrap": "^5.3.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "typed-react-markdown": "^0.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/react-router-dom": "^5.3.3"
   }
 }
